--- a/awesomes/awesome_with_repo_info.html
+++ b/awesomes/awesome_with_repo_info.html
@@ -414,7 +414,7 @@
      Maintenance Modules
     </a>
     <span>
-     | &#9733 228, pushed 88 days ago |
+     | &#9733 228, pushed 89 days ago |
     </span>
     <em>
      (for npm packages)
@@ -462,7 +462,7 @@
      Education
     </a>
     <span>
-     | &#9733 4431, pushed 7 days ago |
+     | &#9733 4431, pushed 8 days ago |
     </span>
    </li>
    <li>
@@ -978,7 +978,7 @@
    Meteor
   </a>
   <span>
-   | &#9733 537, pushed 14 days ago |
+   | &#9733 537, pushed 15 days ago |
   </span>
  </li>
  <li>
@@ -1084,7 +1084,7 @@
    A-Frame VR
   </a>
   <span>
-   | &#9733 203, pushed 6 days ago |
+   | &#9733 203, pushed 7 days ago |
   </span>
   <em>
    (Virtual reality)
@@ -1299,7 +1299,7 @@
    nginx
   </a>
   <span>
-   | &#9733 1615, pushed 50 days ago |
+   | &#9733 1615, pushed 51 days ago |
   </span>
  </li>
  <li>
@@ -1343,6 +1343,9 @@
   <a href="https://github.com/okulbilisim/awesome-datascience">
    Data Science
   </a>
+  <span>
+   | &#9733 2293, pushed 0 days ago |
+  </span>
  </li>
  <li>
   <a href="https://github.com/josephmisiti/awesome-machine-learning">
@@ -1452,7 +1455,7 @@
    Software-Defined Networking
   </a>
   <span>
-   | &#9733 18, pushed 32 days ago |
+   | &#9733 18, pushed 33 days ago |
   </span>
  </li>
 </ul>
@@ -1728,7 +1731,7 @@
    PICO-8
   </a>
   <span>
-   | &#9733 83, pushed 17 days ago |
+   | &#9733 83, pushed 18 days ago |
   </span>
   <em>
    (Fantasy console)
@@ -1818,7 +1821,7 @@
    Git Cheat Sheet & Git Flow
   </a>
   <span>
-   | &#9733 1133, pushed 34 days ago |
+   | &#9733 1133, pushed 35 days ago |
   </span>
  </li>
  <li>
@@ -2065,7 +2068,7 @@
    Computer History
   </a>
   <span>
-   | &#9733 576, pushed 5 days ago |
+   | &#9733 576, pushed 6 days ago |
   </span>
  </li>
 </ul>
@@ -2274,7 +2277,7 @@
    Endangered Languages
   </a>
   <span>
-   | &#9733 78, pushed 22 days ago |
+   | &#9733 78, pushed 23 days ago |
   </span>
  </li>
  <li>
@@ -2513,7 +2516,7 @@
    JSON Datasets
   </a>
   <span>
-   | &#9733 83, pushed 125 days ago |
+   | &#9733 83, pushed 126 days ago |
   </span>
  </li>
  <li>
