Update all awesomes

--- a/awesomes/awesome_tensorflow_with_repo_info.html
+++ b/awesomes/awesome_tensorflow_with_repo_info.html
@@ -76,7 +76,7 @@
    TensorFlow Tutorial 1
   </a>
   <span>
-   &#9733 2111, pushed 4 days ago
+   &#9733 2132, pushed 7 days ago
   </span>
   - From the basics to slightly more interesting applications of TensorFlow
  </li>
@@ -85,7 +85,7 @@
    TensorFlow Tutorial 2
   </a>
   <span>
-   &#9733 1854, pushed 19 days ago
+   &#9733 1873, pushed 22 days ago
   </span>
   - Introduction to deep learning based on Google's TensorFlow framework. These tutorials are direct ports of Newmu's Theano
  </li>
@@ -94,7 +94,7 @@
    TensorFlow Examples
   </a>
   <span>
-   &#9733 2269, pushed 29 days ago
+   &#9733 2302, pushed 32 days ago
   </span>
   - TensorFlow tutorials and code examples for beginners
  </li>
@@ -112,7 +112,7 @@
    Pretty Tensor
   </a>
   <span>
-   &#9733 557, pushed 29 days ago
+   &#9733 559, pushed 32 days ago
   </span>
   - Pretty Tensor provides a high level builder API
  </li>
@@ -121,7 +121,7 @@
    Neural Style
   </a>
   <span>
-   &#9733 580, pushed 1 days ago
+   &#9733 585, pushed 0 days ago
   </span>
   - An implementation of neural style
  </li>
@@ -130,7 +130,7 @@
    TensorFlow White Paper Notes
   </a>
   <span>
-   &#9733 176, pushed 66 days ago
+   &#9733 180, pushed 69 days ago
   </span>
   - Annotated notes and summaries of the TensorFlow white paper, along with SVG figures and links to documentation
  </li>
@@ -139,7 +139,7 @@
    NeuralArt
   </a>
   <span>
-   &#9733 185, pushed 150 days ago
+   &#9733 185, pushed 153 days ago
   </span>
   - Implementation of A Neural Algorithm of Artistic Style
  </li>
@@ -153,7 +153,7 @@
    Generative Handwriting Demo using TensorFlow
   </a>
   <span>
-   &#9733 164, pushed 53 days ago
+   &#9733 165, pushed 56 days ago
   </span>
   - An attempt to implement the random handwriting generation portion of Alex Graves' paper
  </li>
@@ -161,6 +161,9 @@
   <a href="https://github.com/carpedm20/NTM-tensorflow">
    Neural Turing Machine in TensorFlow
   </a>
+  <span>
+   &#9733 280, pushed 102 days ago
+  </span>
   - implementation of Neural Turing Machine
  </li>
  <li>
@@ -168,7 +171,7 @@
    GoogleNet Convolutional Neural Network Groups Movie Scenes By Setting
   </a>
   <span>
-   &#9733 169, pushed 2 days ago
+   &#9733 169, pushed 5 days ago
   </span>
   - Search, filter, and describe videos based on objects, places, and other things that appear in them
  </li>
@@ -177,7 +180,7 @@
    Neural machine translation between the writings of Shakespeare and modern English using TensorFlow
   </a>
   <span>
-   &#9733 58, pushed 65 days ago
+   &#9733 58, pushed 68 days ago
   </span>
   - This performs a monolingual translation, going from modern English to Shakespeare and vis-versa.
  </li>
@@ -186,7 +189,7 @@
    Colornet - Neural Network to colorize grayscale images
   </a>
   <span>
-   &#9733 2676, pushed 15 days ago
+   &#9733 2681, pushed 18 days ago
   </span>
   - Neural Network to colorize grayscale images
  </li>
@@ -194,9 +197,6 @@
   <a href="https://github.com/jazzsaxmafia/show_attend_and_tell.tensorflow">
    Neural Caption Generator
   </a>
-  <span>
-   &#9733 83, pushed 124 days ago
-  </span>
   - Implementation of
   <a href="http://arxiv.org/abs/1411.4555">
    "Show and Tell"
@@ -206,9 +206,6 @@
   <a href="https://github.com/jazzsaxmafia/show_attend_and_tell.tensorflow">
    Neural Caption Generator with Attention
   </a>
-  <span>
-   &#9733 83, pushed 124 days ago
-  </span>
   - Implementation of
   <a href="http://arxiv.org/abs/1502.03044">
    "Show, Attend and Tell"
@@ -219,7 +216,7 @@
    Weakly_detector
   </a>
   <span>
-   &#9733 83, pushed 31 days ago
+   &#9733 83, pushed 34 days ago
   </span>
   - Implementation of
   <a href="http://cnnlocalization.csail.mit.edu/">
@@ -231,7 +228,7 @@
    Dynamic Capacity Networks
   </a>
   <span>
-   &#9733 0, pushed 10 days ago
+   &#9733 0, pushed 13 days ago
   </span>
   - Implementation of
   <a href="http://arxiv.org/abs/1511.07838">
@@ -243,7 +240,7 @@
    HMM in TensorFlow
   </a>
   <span>
-   &#9733 61, pushed 23 days ago
+   &#9733 61, pushed 26 days ago
   </span>
   - Implementation of viterbi and forward/backward algorithms for HMM
  </li>
@@ -252,7 +249,7 @@
    DeepOSM
   </a>
   <span>
-   &#9733 89, pushed 0 days ago
+   &#9733 103, pushed 0 days ago
   </span>
   - Train TensorFlow neural nets with OpenStreetMap features and satellite imagery.
  </li>
@@ -270,7 +267,7 @@
    YOLO TensorFlow
   </a>
   <span>
-   &#9733 88, pushed 87 days ago
+   &#9733 92, pushed 90 days ago
   </span>
   - Implementation of 'YOLO : Real-Time Object Detection'
  </li>
@@ -294,7 +291,7 @@
    tflearn
   </a>
   <span>
-   &#9733 2650, pushed 0 days ago
+   &#9733 2662, pushed 0 days ago
   </span>
   - Deep learning library featuring a higher-level API
  </li>
@@ -305,11 +302,20 @@
   - High-level library for defining models
  </li>
  <li>
+  <a href="https://github.com/tjhunter/tensorframes">
+   TensorFrames
+  </a>
+  <span>
+   &#9733 16, pushed 0 days ago
+  </span>
+  - TensorFlow binding for Apache Spark
+ </li>
+ <li>
   <a href="https://github.com/ethereon/caffe-tensorflow">
    caffe-tensorflow
   </a>
   <span>
-   &#9733 300, pushed 11 days ago
+   &#9733 306, pushed 0 days ago
   </span>
   - Convert Caffe models to TensorFlow format
  </li>
@@ -381,6 +387,12 @@
   <a href="http://blog.altoros.com/videos-from-tensorflow-seattle-meetup-jan-21-2016.html">
    Videos from TensorFlow Silicon Valley Meet Up 1/21/2016
   </a>
+ </li>
+ <li>
+  <a href="https://www.youtube.com/watch?v=L8Y2_Cq2X5s&index=7&list=PLmImxx8Char9Ig0ZHSyTqGsdhb9weEGam">
+   Stanford CS224d Lecture 7 - Introduction to TensorFlow, 19th Apr 2016
+  </a>
+  - CS224d Deep Learning for Natural Language Processing by Richard Socher
  </li>
 </ul>
 <p>
@@ -466,6 +478,12 @@
   <a href="https://indico.io/blog/indico-tensorflow">
    The indico Machine Learning Team's take on TensorFlow
   </a>
+ </li>
+ <li>
+  <a href="https://indico.io/blog/the-good-bad-ugly-of-tensorflow/">
+   The Good, Bad, & Ugly of TensorFlow
+  </a>
+  - A survey of six months rapid evolution (+ tips/hacks and code to fix the ugly stuff), Dan Kuster at Indico, May 9, 2016
  </li>
 </ul>
 <p>
@@ -556,7 +574,7 @@
    vinta
   </a>
   <span>
-   &#9733 20729, pushed 0 days ago
+   &#9733 20826, pushed 0 days ago
   </span>
  </li>
  <li>
