--- a/awesomes/awesome_clojure_with_repo_info.html
+++ b/awesomes/awesome_clojure_with_repo_info.html
@@ -1,7 +1,7 @@
 <h1>
  Awesome Clojure
  <a href="https://github.com/sindresorhus/awesome">
-  <img alt="Awesome" src="https://cdn.rawgit.com/sindresorhus/awesome/d7305f38d29fed78fa85652e3a63e154dd8e8829/media/badge.svg"/>
+  <img alt="Awesome" src="https://cdn.combinatronics.com/sindresorhus/awesome/d7305f38d29fed78fa85652e3a63e154dd8e8829/media/badge.svg"/>
  </a>
 </h1>
 <ul>
